# haskell-with-nix-flake

./: .gitignore  Dockerfile  README.md  enter-nix-flake-env.sh  flake.nix  ft-otp.cabal
.cursor/rules/: my-tdd.mdc  tdd-compressed.mdc
.devcontainer/: devcontainer.json
.github/workflows/: cross-compile.yml
test/: Spec.hs  e2e-test.sh
